--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
-	
-	<!--	******************* DEPENDENCIAS *******************	 -->
+
+	<!-- ******************* DEPENDENCIAS ******************* -->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -33,17 +33,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-		
-		<!--	**** MySql ****	 -->
+
+		<!-- **** MySql **** -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.31</version>
 		</dependency>
-		
-		<!--	**** OpenApi - Swagger ****	 -->
+
+		<!-- **** OpenApi - Swagger **** -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
@@ -55,17 +55,33 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
-		<!--	**** Hibernate Validator also provides a set of built-in constraints, such as @NotNull, @Min, @Max, @Size, @Email, etc. You can also create custom constraints. ****	 -->
+		<!-- **** Hibernate Validator also provides a set of built-in constraints, 
+			such as @NotNull, @Min, @Max, @Size, @Email, etc. You can also create custom 
+			constraints. **** -->
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>8.0.0.Final</version>
 		</dependency>
 
+		<!-- **** Mapper DTO-Entity **** -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version>
+			<scope>provided</scope>
+		</dependency>
+
 
 	</dependencies>
 
-	<!--	******************* FIN DEPENDENCIAS *******************	 -->
+	<!-- ******************* FIN DEPENDENCIAS ******************* -->
 
 	<build>
 		<plugins>
